@@ -1,3 +1,7 @@
+* Tue Dec 1 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
+- Provide more information from "help" request ... frame3dd -h
+- Add -w flag to frame_3dd.m so that the stiffness matrix is written
+
 * Tue Nov 24 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
 - Change Duke Univ URL in source code comments to frame3dd.sourceforge.net
 - Added a simple Makefile to   trunk/src/  directory
